[metadata]
# replace with your username:
name = tqenergymanager300
version = 0.0.2
author = stieler .IT
author_email = michael@stieler.it
description = Client for TQ-Automation Energy Manager 300 JSON API
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/stieler-it/tqenergymanager300py
project_urls =
    Bug Tracker = https://github.com/stieler-it/tqenergymanager300py/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src